--- a/App1mtwdm/App1mtwdm/Base.lproj/Main.storyboard
+++ b/App1mtwdm/App1mtwdm/Base.lproj/Main.storyboard
@@ -720,11 +720,11 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J0E-8z-P6A">
-                                <rect key="frame" x="132" y="188" width="186" height="32"/>
+                                <rect key="frame" x="134" y="188" width="182" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <buttonCell key="cell" type="push" title="Decir Hola Mundo " bezelStyle="rounded" imagePosition="overlaps" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="t57-Bx-IHN">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="systemHeavy" size="16"/>
+                                    <font key="font" metaFont="systemBold" size="16"/>
                                 </buttonCell>
                                 <connections>
                                     <action selector="onSaludar:" target="hiz-9m-M5q" id="Q2O-UI-zFB"/>
@@ -770,7 +770,7 @@
                 </viewController>
                 <customObject id="56E-Uh-Cpo" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="54" y="729"/>
+            <point key="canvasLocation" x="60" y="697"/>
         </scene>
         <!--Alertas View Controller-->
         <scene sceneID="Ops-AA-EGE">
@@ -841,7 +841,7 @@
                 </viewController>
                 <customObject id="pnV-12-WOW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="111" y="1140"/>
+            <point key="canvasLocation" x="-40" y="1164"/>
         </scene>
         <!--Saludo View Controller-->
         <scene sceneID="Bpn-SF-5Hf">
@@ -852,7 +852,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yN2-uY-w67">
-                                <rect key="frame" x="32" y="59" width="517" height="145"/>
+                                <rect key="frame" x="32" y="65" width="521" height="139"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Label" allowsEditingTextAttributes="YES" id="AcU-gm-EqH">
                                     <font key="font" metaFont="system"/>
@@ -868,7 +868,7 @@
                 </viewController>
                 <customObject id="TMC-l2-A6C" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="702" y="648"/>
+            <point key="canvasLocation" x="721" y="453"/>
         </scene>
     </scenes>
 </document>
